<resources>
    <string name="app_name">HS12ServicePerson</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot Password ?</string>
    <string name="username_hint"><font size="14">Email_id/Phone number</font></string>
    <string name="signup">Sign Up</string>
    <string name="name_hint"><font size="14">Full name</font></string>
    <string name="phonenumber_hint"><font size="14">Phone number</font></string>
    <string name="email_hint"><font size="14">Email_Id</font></string>
    <string name="gender_hint"><font size="14">Gender</font></string>
    <string name="dateofbirth_hint"><font size="14">Date of birth</font></string>
    <string name="profession_hint"><font size="14">Primary profession</font></string>
    <string name="password_hint"><font size="14">Password</font></string>
    <string name="confirmpassword_hint"><font size="14">Confirm password</font></string>
    <string name="alreadyaccount">Already have an account ?</string>
    <string name="radiomale"><font size="14">Male</font></string>
    <string name="radiofemale"><font size="14">Female</font></string>
    <string name="radioothers"><font size="14">Others</font></string>
    <string name="home_menu">My Task</string>
    <string name="profile_menu">Profile</string>
    <string name="request_menu">Requests</string>
    <string name="more_menu">More</string>
    <string name="no_task">Your task is empty, Please fill your profile details to get your task</string>
    <string name="finalprice">Update final price</string>
    <string name="reasonforfinalprice"><font size="14">Reason for  extra charge..</font></string>
    <string name="sendbutton"> Send </string>
    <string name="enterprice">Enter your final price</string>
    <string name="startserviceheader">Start your service by</string>
    <string name="startservice1">Issue Description</string>
    <string name="startservice2">Final price</string>
    <string name="tobefilled1">* Complete your profile </string>
    <string name="tobefilled2">* Profile verification and approval </string>
    <string name="tobefilled3">* Enter your Service details</string>
    <string name="tobefilled4">  Buy premium partner package </string>
    <string name="qoutewillsend">Your Qutotation will be sent to the requested user</string>
    <string name="rupies">\u20B9</string>
    <string name="admincharge">\u20B9 100</string>
    <string name="quotecoustomer">Note to coustomers</string>
    <string name="adminfee">Admin fee</string>
    <string name="convcharge">"Convenience Charge"</string>
    <string name="enteramount">"Enter amount"</string>
    <string name="enterpartnerquote"><font size="14"> Type here..."</font></string>
    <string name="primaryservices">My primary services</string>
    <string name="selectservices">Select your service providing location and service.</string>
    <string name="location">Location</string>
    <string name="approvalbutton">Submit for approval</string>
    <string name="waitingapprovalbutton">Waiting for approval</string>
    <string name="aboutus1"><![CDATA[Home service is providing you the best service profesionals to fulfil your requirements.Our aim is to use smart technology & processes to buld unorganized service market all over India.]]></string>
    <string name="about2"><![CDATA[The main objective of Home service is to hire professionals to help the customers by providing services like salon at home for men & women, carpenter, electrician,pest control, appliances & electronic repairs.]]></string>
    <string name="award"><![CDATA[Awards & certificate Photos]]></string>
    <string name="supportString1">"It may take some time please wait until we connect a call.</string>
    <string name="terms">Welcome to Home service. You may use iur services through our website www.houseservice.in (\"Website\") or our mobile application (\"HS App\").Our Website and HS App have been create to provide information about our company and services to visitors and user of services, weather accessible to you web,mobile App or other platform (our services,together with our site, are the \"Service\")</string>
    <string name="enteremailForgotPass">Enter your registered Email-ID or Phone number to continue..</string>
    <string name="SetNewPass">Enter OTP which have sent to your Emial-ID or Phone Number</string>
    <string name="onfailure">Something went wrong</string>
    <string name="supportnumber">9886106330</string>
    <string name="selectcountry">Select Country</string>
    <string name="selectcountryid">Country Id</string>
    <string name="selectstate">Select State</string>
    <string name="selectstateid">State Id</string>
    <string name="selectstatestatus">State status</string>
    <string name="selectcity">Select Cities</string>
    <string name="selectcityid">City Id</string>
    <string name="selectcityidpartnerstatus">Parnter Status</string>
    <string name="nocities">Cities not found</string>
    <string name="zipcode_hint"><font size="14"> Enter Zip Code</font></string>
    <string name="profilestatusnote">Please get approval for your profile details to add location and services</string>
    <string name="waitingforapproval">Waiting for approval</string>
    <string name="email_phone_number_hint">Email ID/ Phone number</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user_sign_up_text">New User ? Sign Up</string>
    <string name="signup_text">Signup</string>
    <string name="details_text">Fill in the details</string>
    <string name="full_name_hint">Full Name</string>
    <string name="mobile_num_text">Mobile Number</string>
    <string name="email_id_text">Email ID</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="date_of_birth_text">Date of birth</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="terms_text">By signing up, you agree to our Terms and conditions and Privacy policy</string>
    <string name="already_have_an_account_login">Already have an account ? </string>
    <string name="terms_and_conditionals">Terms and conditions</string>
    <string name="work_type_text">Select your type of work</string>
    <string name="salon_at_home_for_women">Salon at home for Women</string>
    <string name="next_text">Next</string>
    <string name="update_profile_text">Upload Profile Picture</string>
    <string name="name">Name</string>
    <string name="house_flat_no">House/Flat no.</string>
    <string name="street_text">Street</string>
    <string name="area">Area</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="phone_number">Phone number</string>
    <string name="your_current_address">Your Current Address</string>
    <string name="upload_your_current_address_proof">Upload your current Address proof</string>
    <string name="select_your_id_proof">Select your ID Proof</string>
    <string name="type_of_id">Type of ID</string>
    <string name="full_name_in_id_proof">Full Name in ID proof</string>
    <string name="enter_the_id_number">Enter the ID number</string>
    <string name="pick_image_intent_text">Please Select Image</string>
    <string name="if_you_are_new_partner">If you are new partner,</string>
    <string name="or_text">OR</string>
    <string name="already_have_a_partner_account_text">Already have a partner account,</string>
    <string name="reschedule_text">Reschedule</string>
    <string name="end_service_text">End Service</string>
    <string name="service_has_started_text">Service has started....</string>
    <string name="ok_text">OK</string>
    <string name="reason_for_rescheduling_the_service_text">Reason for Rescheduling the service</string>
    <string name="customer_not_at_home_text">Customer not at home</string>
    <string name="customer_not_well_text">Customer not well</string>
    <string name="technical_issue_text">Technical issue</string>
    <string name="others_text">Others</string>
    <string name="schedule_date_time_text"><![CDATA[Schedule Date & Time]]></string>
    <string name="cancel_text">Cancel</string>
    <string name="submit_text">Submit</string>
    <string name="colon_symbol">:</string>
    <string name="tomorrow_text">Tomorrow 25 Thu</string>
    <string name="day_after_26_fri">Day After 26 Fri</string>
    <string name="service_has_been_rescheduled_to">Service has been rescheduled to</string>
    <string name="tomorrow_25_thu_at_1_30_pm">Tomorrow, 25 Thu at 1:30 PM</string>
    <string name="service_ended_text">Service has ended , payment yet to be done....</string>
    <string name="payment_received_text">Payment Received</string>
    <string name="payment_pending_text">Payment pending</string>
    <string name="qty_text">QTY</string>
    <string name="price_text">PRICE</string>
    <string name="main_service">Main Service</string>
    <string name="textview">TextView</string>
    <string name="service_charge_text">Service Charge</string>
    <string name="convivence_charge">Convivence Charge</string>
    <string name="payment_Sucessfull_done_text">Payment Sucessfull done</string>
    <string name="total_text">TOTAL</string>
    <string name="list_of_service">List of service</string>
    <string name="task_text">Task</string>
    <string name="more_text">More</string>
    <string name="my_payment_text">My payment</string>
    <string name="about_us">About us</string>
    <string name="help_centre">Help centre</string>
    <string name="prime_packages_text">Prime Packages</string>
    <string name="change_password_text">Change Password</string>
    <string name="logout_text">Logout</string>
    <string name="request_id">Request ID :</string>
    <string name="paid_text">PAID</string>
    <string name="services_text">Services</string>
    <string name="amount_text">Amount</string>
    <string name="yet_to_pay">Yet to Pay</string>
    <string name="abouts_us_text">The main objective of Home Service is to hire professionals to help the customers by providing services like salon at home for men and women, carpnter, electrician, plumber,
        house interior decoration, bridal makeup, cleaning pest control, appliances and electronic repairs.</string>
    <string name="about_us_details">Home services is providing you the best service professionals to fulfill
        your requirements.Our aim is to use smart technology and process to build unorganized service market all over India</string>
    <string name="help_centre_text">Help centre</string>
    <string name="customer_support">Customer support</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="f_a_q_text">F.A.Q</string>
    <string name="home_service_support_text">Home service support</string>
    <string name="service_text">It may take some time, please wait\n until we connect a call.</string>
    <string name="request_all_back_text">Request call back</string>
    <string name="email_account_text"><![CDATA[EMAIL ID:<xxxxx@gmail.com>]]></string>
    <string name="registered_office_add_text">Registered Office Address</string>
    <string name="customer_support_address">16/2, Haudin Road, Sivanchetti\n Garden Ulsoor, Bangalore,\n Karnataka, 560042</string>
    <string name="open_in_maps_text">Open in Maps</string>
    <string name="new_password_text">New Password</string>
    <string name="update_text">Update</string>
    <string name="awards_and_certificates"><![CDATA[Awards & certificates]]></string>
    <string name="photos_upload_2">Photos Upload : 2</string>
    <string name="add_photos_text">Add Photos</string>
    <string name="hair_styling_text">Certificate of Hairstyling from Ayra Institute</string>
    <string name="award_text">AWARD</string>
</resources>