<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/navigation_mytask"
        android:icon="@drawable/menuselectionformytask_layout"
        android:title="@string/home_menu"
        app:showAsAction="ifRoom"

        />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/menuselectionforprofile_layout"
        android:title="@string/profile_menu"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/navigation_allrequest"
        android:icon="@drawable/menuselectionforallrequest_layout"
        android:title="@string/request_menu"
        app:showAsAction="ifRoom"
        />


    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/menuselectionformore_layout"
        android:title="@string/more_menu"
        app:showAsAction="ifRoom"
        />




</menu>

    <!--     app:showAsAction="always|never"-->