<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryGray"
    tools:context=".activities.LoginChangePasswordActivity">

    <TextView
        android:id="@+id/forgotPasswordTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_20"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center"
        android:text="@string/change_password_text"
        android:textColor="@color/color_black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/newPasswordET"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/forgotPasswordTV"
        android:layout_marginHorizontal="@dimen/spacing_20"
        android:layout_marginTop="@dimen/spacing_20"
        android:background="@drawable/partner_login_edittext_background"
        android:gravity="center"
        android:hint="@string/new_password_text"
        android:importantForAutofill="no"
        android:textColorHint="@color/color_orange"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/confirmPasswordET"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/spacing_20"
        android:layout_marginTop="@dimen/spacing_20"
        android:background="@drawable/partner_login_edittext_background"
        android:gravity="center"
        android:layout_below="@+id/newPasswordET"
        android:hint="@string/confirm_password_text"
        android:importantForAutofill="no"
        android:textColorHint="@color/color_orange"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/changePasswordBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="@dimen/spacing_double2"
        android:background="@drawable/loginbutton"
        android:layout_below="@+id/confirmPasswordET"
        android:text="@string/change_password_text"
        android:textAllCaps="false"
        android:textColor="@color/color_orange" />

    <ImageView
        android:id="@+id/loginImageIV"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/login_image" />

</RelativeLayout>