<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryGray"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/arrowBack"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/arrow_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/signupTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/signup_text"
            android:textColor="@color/colorPrimaryBlack"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/detailsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signupTV"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/details_text"
            android:textColor="@color/colorPrimaryBlack"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailsTV"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/color_orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/full_name_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColorHint="@color/color_orange" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobileNumberTL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameTL"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/color_orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobileNumberET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/mobile_num_text"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mobileNumberTL"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/color_orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/email_id_text"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/genderRL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailTL"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/maleGenderIV"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/male_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/maleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/maleGenderIV"
                android:layout_marginStart="13dp"
                android:text="@string/male_text"
                android:textColor="@color/color_orange"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/femaleGenderIV"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@+id/maleGenderIV"
                android:src="@drawable/female_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/femaleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/femaleGenderIV"
                android:layout_marginStart="50dp"
                android:layout_toEndOf="@+id/maleTV"
                android:text="@string/female_text"
                android:textColor="@color/color_orange"
                android:textSize="16sp" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateOfBirthTL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/genderRL"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/color_orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateOfBirthET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/date_of_birth_text"
                android:importantForAutofill="no"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateOfBirthTL"
            android:layout_marginHorizontal="20dp"
            android:textColorHint="@color/color_orange"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/password_hint"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordTL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordTL"
            android:layout_marginHorizontal="20dp"
            android:textColorHint="@color/color_orange"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:focusable="true"
                android:hint="@string/confirm_password_text"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/checkBoxIV"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_below="@+id/confirmPasswordTL"
            android:layout_marginStart="20dp"
            android:src="@drawable/checkbox_unchecked_icon"
            tools:ignore="ContentDescription,MissingPrefix" />

        <TextView
            android:id="@+id/termsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirmPasswordTL"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/checkBoxIV"
            android:fontFamily="@font/open_sans"
            android:text="@string/terms_text"
            android:textSize="12sp" />


        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/termsTV"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/loginbutton"
            android:text="@string/signup_text"
            android:textAllCaps="false"
            android:textColor="@color/color_orange"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/alreadyAccountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signupButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/already_have_an_account_login" />

        <TextView
            android:id="@+id/loginTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signupButton"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/alreadyAccountTV"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/login"
            android:textColor="@color/color_orange" />

    </RelativeLayout>

</ScrollView>