<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:cardUseCompatPadding="true"
            app:cardElevation="8dp"
            app:cardCornerRadius="3dp"
            android:background="@drawable/popupwhitebackground"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:background="@drawable/popupwhitebackground"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/startserviceheader"
                android:fontFamily="@string/enterprice"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/color_white"

                />


            <Button
                android:id="@+id/startservicebyissueprice_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/startservice1"
                android:textColor="@color/color_blue"
                android:fontFamily="@font/montserrat"
                android:textAllCaps="false"
                android:background="@drawable/updatefinalpricebuttonbackground"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                />

            <Button
                android:id="@+id/startservicebyfinalprice_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/startservice2"
                android:textColor="@color/color_blue"
                android:fontFamily="@font/montserrat"
                android:textAllCaps="false"
                android:background="@drawable/updatefinalpricebuttonbackground"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                />
        </LinearLayout>
            </androidx.cardview.widget.CardView>

    </RelativeLayout>
</RelativeLayout>