<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/spacing_20"
    tools:context=".activities.LicensesAndCertificatesActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/arrowIV"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="@dimen/spacing_20"
            android:layout_marginTop="30dp"
            android:src="@drawable/arrow_back"
            tools:ignore="ContentDescription,UnusedAttribute" />

        <TextView
            android:id="@+id/headerTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_20"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="@string/awards_and_certificates"
            android:textColor="@color/color_black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/photoUploadTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headerTV"
            android:layout_marginTop="@dimen/spacing_normal"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center"
            android:text="@string/photos_upload_2"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/photoUploadTV"
            android:layout_marginTop="@dimen/spacing_medium2"
            android:gravity="center">

            <ImageView
                android:id="@+id/uploadImageOneIV"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/upload_image"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uploadImageOneIV"
                android:layout_marginStart="60dp"
                android:layout_marginTop="5dp"
                android:text="@string/add_photos_text"
                android:textColor="@color/color_orange" />

            <ImageView
                android:id="@+id/uploadImageTwoIV"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginHorizontal="20dp"
                android:layout_toEndOf="@+id/uploadImageOneIV"
                android:src="@drawable/upload_image"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uploadImageTwoIV"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/spacing_double2"
                android:layout_toEndOf="@+id/uploadImageOneIV"
                android:gravity="center"
                android:text="@string/hair_styling_text"
                android:textColor="@color/color_orange" />

            <ImageView
                android:id="@+id/uploadImageThreeIV"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_below="@+id/uploadImageOneIV"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/upload_image"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/uploadImageThreeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uploadImageThreeIV"
                android:layout_marginStart="70dp"
                android:layout_marginTop="5dp"
                android:text="@string/award_text"
                android:textColor="@color/color_orange" />

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uploadImageThreeTV"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="@dimen/spacing_double2"
                android:background="@drawable/loginbutton"
                android:text="@string/update_text"
                android:textAllCaps="false"
                android:textColor="@color/color_white" />
        </RelativeLayout>

    </RelativeLayout>


</ScrollView>
